Added my project

--- a/notebooks/1-produce.ipynb
+++ b/notebooks/1-produce.ipynb
@@ -23,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace the following two placeholders with Aiven for Apache Kafka service hostname and port\n",
     "\n",
-    "hostname=\"<MYKAFKAHOST>\"\n",
-    "port=\"<MYKAFKAPORT>\""
+    "hostname=\"kafka-12af5b8-kartavya155-4635.a.aivencloud.com\"\n",
+    "port=\"24375\""
    ]
   },
   {
@@ -46,9 +46,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting confluent-kafka\n",
+      "  Downloading confluent_kafka-2.2.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.0 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.0/4.0 MB\u001b[0m \u001b[31m22.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: confluent-kafka\n",
+      "Successfully installed confluent-kafka-2.2.0\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install confluent-kafka"
    ]
@@ -66,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,9 +119,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "%3|1698155783.629|FAIL|myclient#producer-1| [thrd:ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/boots]: ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/bootstrap: Failed to resolve '<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0': Name or service not known (after 0ms in state CONNECT, 15 identical error(s) suppressed)\n",
+      "%3|1698155813.630|FAIL|myclient#producer-1| [thrd:ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/boots]: ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/bootstrap: Failed to resolve '<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0': Name or service not known (after 0ms in state CONNECT, 15 identical error(s) suppressed)\n",
+      "%3|1698155843.631|FAIL|myclient#producer-1| [thrd:ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/boots]: ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/bootstrap: Failed to resolve '<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0': Name or service not known (after 0ms in state CONNECT, 15 identical error(s) suppressed)\n",
+      "%3|1698155873.631|FAIL|myclient#producer-1| [thrd:ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/boots]: ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/bootstrap: Failed to resolve '<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0': Name or service not known (after 0ms in state CONNECT, 15 identical error(s) suppressed)\n",
+      "%3|1698155903.632|FAIL|myclient#producer-1| [thrd:ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/boots]: ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/bootstrap: Failed to resolve '<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0': Name or service not known (after 0ms in state CONNECT, 15 identical error(s) suppressed)\n",
+      "%3|1698155934.634|FAIL|myclient#producer-1| [thrd:ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/boots]: ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/bootstrap: Failed to resolve '<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0': Name or service not known (after 0ms in state CONNECT, 16 identical error(s) suppressed)\n",
+      "%3|1698155964.635|FAIL|myclient#producer-1| [thrd:ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/boots]: ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/bootstrap: Failed to resolve '<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0': Name or service not known (after 0ms in state CONNECT, 15 identical error(s) suppressed)\n",
+      "%3|1698155995.636|FAIL|myclient#producer-1| [thrd:ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/boots]: ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/bootstrap: Failed to resolve '<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0': Name or service not known (after 0ms in state CONNECT, 16 identical error(s) suppressed)\n",
+      "%3|1698156025.637|FAIL|myclient#producer-1| [thrd:ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/boots]: ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/bootstrap: Failed to resolve '<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0': Name or service not known (after 0ms in state CONNECT, 15 identical error(s) suppressed)\n",
+      "%3|1698156055.638|FAIL|myclient#producer-1| [thrd:ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/boots]: ssl://<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0/bootstrap: Failed to resolve '<kafka-12af5b8-kartavya155-4635.a.aivencloud.com>:0': Name or service not known (after 0ms in state CONNECT, 15 identical error(s) suppressed)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "producer.produce(\n",
     "    \"pizzas\",\n",
@@ -131,9 +171,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "producer.produce(\n",
     "    \"pizzas\",\n",
@@ -167,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
